Dockerfile updated, run on openjdk:21-jdk-slim, see command.txt